@@ -1,3 +1,15 @@
+2013-01-14  Dean Jackson  <dino@apple.com>
+
+        [ANGLE] Update ANGLE in WebKit
+        https://bugs.webkit.org/show_bug.cgi?id=106274
+
+        Unreviewed attempted build fix.
+
+        Remove the copy files stage. Make khrplatform.h a public header.
+
+        * ANGLE.xcodeproj/project.pbxproj:
+        * include/GLSLANG/ShaderLang.h:
+
 2013-01-14  Max Vujovic  <mvujovic@adobe.com>
 
         [ANGLE] Update ANGLE in WebKit
